# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .gitignore  .localgitignore  AGENTS.md  CLAUDE.MD  CLAUDE.md  README.md  RELEASING.md  Taskfile.yml  cspell.json  dot_gitconfig.tmpl  dot_zprofile  dot_zprofile.tmpl  dot_zshenv  dot_zshenv.tmpl  dot_zshrc  dot_zshrc.tmpl  get.sh  install-impl.sh  install.sh  install_impl.sh  run_after_ensure-worktrunk-agents-hook.sh  run_after_ensure-worktrunk-claude-hook.sh  run_after_refresh-nono-profile-schema.sh.tmpl  run_once_configure-vpn-fix-tool.sh.tmpl  run_once_install_vpn_fixes.sh.tmpl  run_onchange_after_install-plan-html.sh.tmpl
.chezmoitemplates/: agent-code-refactor-master.md.tmpl  agent-design-reviewer.md.tmpl  agent-plan-clarity-reviewer.md.tmpl  agent-plan-executability-reviewer.md.tmpl  agent-plan-rfc-fidelity-reviewer.md.tmpl  agent-refactor-planner.md.tmpl  agent-rfc-clarity-reviewer.md.tmpl  sedg_profile  (+5 more)
private_dot_local/share/plan-html/: .gitignore  README.md  pyproject.toml
private_dot_local/share/plan-html/src/plan_html/: __init__.py  __main__.py  graph.py  markdown.py  render.py
private_dot_local/share/plan-html/src/plan_html/assets/: app.js  base.css  themes.css
private_dot_local/share/plan-html/tests/: test_render.py
private_dot_local/share/plan-html/tests/fixtures/demo-plan/: 00-master.md  01-foundation.md  02-theme-control.md  03-review-fixture.md  04-long-lines.md  05-wide-dag.md
private_dot_local/share/plan-html/tests/fixtures/demo-plan/reviews/: plan-clarity-reviewer.md
(+482 files in other folders)
