[project]
name = "plan-html"
version = "0.1.0"
description = "Render markdown implementation plans as interactive HTML review views"
requires-python = ">=3.10"
dependencies = [
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
]

[project.scripts]
plan-html = "plan_html.render:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plan_html"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]
